# AstroLab

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: test.yml
astro-transits/: SKILL.md
astro-transits/references/: houses.md  method.md
astro-transits/scripts/: astro_calc.py
astrolab/: SKILL.md  __init__.py  __main__.py
astrolab/references/: method.md
astrolab/scripts/: __init__.py  astro_calc.py
tests/: test_astro_calc.py
