[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "astrolab-transits"
version = "0.2.0"
description = "Swiss Ephemeris calculations for natal, transit, and progression work"
readme = "README.md"
requires-python = ">=3.9"
license = {file = "LICENSE"}
dependencies = [
  "pyswisseph>=2.10,<3",
  "tzdata>=2025.2,<2027; platform_system == 'Windows'",
]

[project.scripts]
astrolab = "astrolab.scripts.astro_calc:main"

[tool.setuptools.package-data]
astrolab = ["SKILL.md", "references/*.md"]
